--- a/olympics.ipynb
+++ b/olympics.ipynb
@@ -2,32 +2,275 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import kagglehub"
+    "import kagglehub\n",
+    "import os"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gennasilva/olympics dataset/ai4all\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load dataset from kaggle\n",
+    "path = kagglehub.dataset_download(\"divyansh22/summer-olympics-medals\")\n",
+    "\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Discipline</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Athlete</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country_Code</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Event_gender</th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>3m springboard</td>\n",
+       "      <td>KÖHLER, Christa</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>GDR</td>\n",
+       "      <td>East Germany</td>\n",
+       "      <td>W</td>\n",
+       "      <td>Silver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>3m springboard</td>\n",
+       "      <td>KOSENKOV, Aleksandr</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>URS</td>\n",
+       "      <td>Soviet Union</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>3m springboard</td>\n",
+       "      <td>BOGGS, Philip George</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Gold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>3m springboard</td>\n",
+       "      <td>CAGNOTTO, Giorgio Franco</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Silver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>10m platform</td>\n",
+       "      <td>WILSON, Deborah Keplar</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>W</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>10m platform</td>\n",
+       "      <td>LOUGANIS, Gregory</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Silver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>10m platform</td>\n",
+       "      <td>VAYTSEKHOVSKAYA, Elena</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>URS</td>\n",
+       "      <td>Soviet Union</td>\n",
+       "      <td>W</td>\n",
+       "      <td>Gold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>3m springboard</td>\n",
+       "      <td>POTTER-MCINGVALE, Cynthia</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>W</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>10m platform</td>\n",
+       "      <td>DIBIASI, Klaus</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Gold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>1976.0</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Diving</td>\n",
+       "      <td>10m platform</td>\n",
+       "      <td>ALEINIK, Vladimir</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>URS</td>\n",
+       "      <td>Soviet Union</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       City    Year     Sport Discipline           Event  \\\n",
+       "0  Montreal  1976.0  Aquatics     Diving  3m springboard   \n",
+       "1  Montreal  1976.0  Aquatics     Diving  3m springboard   \n",
+       "2  Montreal  1976.0  Aquatics     Diving  3m springboard   \n",
+       "3  Montreal  1976.0  Aquatics     Diving  3m springboard   \n",
+       "4  Montreal  1976.0  Aquatics     Diving    10m platform   \n",
+       "5  Montreal  1976.0  Aquatics     Diving    10m platform   \n",
+       "6  Montreal  1976.0  Aquatics     Diving    10m platform   \n",
+       "7  Montreal  1976.0  Aquatics     Diving  3m springboard   \n",
+       "8  Montreal  1976.0  Aquatics     Diving    10m platform   \n",
+       "9  Montreal  1976.0  Aquatics     Diving    10m platform   \n",
+       "\n",
+       "                     Athlete Gender Country_Code        Country Event_gender  \\\n",
+       "0            KÖHLER, Christa  Women          GDR   East Germany            W   \n",
+       "1        KOSENKOV, Aleksandr    Men          URS   Soviet Union            M   \n",
+       "2       BOGGS, Philip George    Men          USA  United States            M   \n",
+       "3   CAGNOTTO, Giorgio Franco    Men          ITA          Italy            M   \n",
+       "4     WILSON, Deborah Keplar  Women          USA  United States            W   \n",
+       "5          LOUGANIS, Gregory    Men          USA  United States            M   \n",
+       "6     VAYTSEKHOVSKAYA, Elena  Women          URS   Soviet Union            W   \n",
+       "7  POTTER-MCINGVALE, Cynthia  Women          USA  United States            W   \n",
+       "8             DIBIASI, Klaus    Men          ITA          Italy            M   \n",
+       "9          ALEINIK, Vladimir    Men          URS   Soviet Union            M   \n",
+       "\n",
+       "    Medal  \n",
+       "0  Silver  \n",
+       "1  Bronze  \n",
+       "2    Gold  \n",
+       "3  Silver  \n",
+       "4  Bronze  \n",
+       "5  Silver  \n",
+       "6    Gold  \n",
+       "7  Bronze  \n",
+       "8    Gold  \n",
+       "9  Bronze  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"olympics_data.csv\", encoding=\"latin1\")\n",
+    "df.head(10)"
+   ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -44,8 +287,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.13.2"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
