--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -30,7 +32,7 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from scipy.sparse import hstack\n",
-    "from scipy.sparse import csr_matrix\n"
+    "from scipy.sparse import csr_matrix"
    ]
   },
   {
@@ -237,7 +239,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -301,7 +305,7 @@
     }
    ],
    "source": [
-    "combined = hstack([csr_matrix(X_lyrics), X_genre, X_tempo])\n"
+    "combined = hstack([csr_matrix(X_lyrics), X_genre, X_tempo])"
    ]
   },
   {
