--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature matrix with vectorized values"
+    "2D Array with vectorized values"
    ]
   },
   {
